# ML-EXray

./: .bazelrc  .gitignore  LICENSE  README.md  WORKSPACE
docs/: MLEXray_cpp.md  MLEXray_java.md
edgeml/python/: README.md  setup.cfg
edgeml/python/example/: Per_layer_Validation.ipynb
edgeml/python/src/MLEXray/: TFLite_Viewer.py  convert_models.py
edgeml/python/src/MLEXray.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
edgeml/python/src/MLEXray/EdgeMLMonitor/: EdgeMLMonitor.py
edgeml/python/src/MLEXray/EdgeMLValidation/: EdgeMLValidation.py
edgeml/python/src/MLEXray/ML_Diff/: Assertions.py  MLDiffer.py  MLLogReader.py  TopKAccuracy.py
edgeml/python/src/MLEXray/Model_Converter/: Model_Converter.py
edgeml/python/src/MLEXray/Model_Runner/: Audio_Model_Runner.py  Image_Model_Runner.py  Keras_Audio_Model_Runner.py  Keras_Image_Model_Runner.py  Keras_Text_Model_Runner.py  Model_Runner.py  Tfhub_Detection_Model_Runner.py  Tflite_Audio_Model_Runner.py  Tflite_Image_Classification_Model_Runner.py  tflite_model_eval.sh
edgeml/python/src/MLEXray/Model_Trainer/: SpeechCommandModel.py  TextClassifierModel.py
edgeml/python/src/MLEXray/Utils/: params.py  tf_utils.py
edgeml/python/src/MLEXray/plots/: per_layer_plots.py  preproc_accuracy_plot.py  preproc_audio_accuracy_plot.py  preproc_obj_det_accuracy_plot.py  quant_accuracy_plot.py  sysarch_fig.py
edgeml/python/src/MLEXray/plots/analysis_results/DenseNet121/quantRef_vs_cloudQuant/: 0_0_debug_report.csv
edgeml/python/src/MLEXray/plots/analysis_results/DenseNet121/quant_vs_cloudQuant/: 0_0_debug_report.csv
(+110 files in other folders)
